0.99
- mmap mode for dv4lstart
- command line options for dv4lstart
- look for free /dev/video device instead of claiming /dev/video0


0.98
- dv4lstart for camcorder access without vloopback

0.97

- 'size' option for programs where memory mapped IO does not work

0.96

- yuv420p support added

0.95

- removed memory-leaking gstreamer from code base

0.91

- fixed some problems with initial parameter settings
- new option -f <framerate> 
- fixed excessive gstreamer buffering