@@ -33,15 +33,17 @@ appear. If this works, dv4lstart should work as well.
 
 Inside 
 .I command,
-use /dev/video0 or /dev/v4l/video0 as video device.
+use the new video device created by
 .B dv4lstart
-temporarily replaces any existing video device residing under /dev/video0 or
-/dev/v4l/video0.
 
 .SH OPTIONS
 .TP
 .BI "\-c, \-\-color\-correction"
 Set this option if red objects look blue.
+.TP
+.BI "\-r, \-\-rgb\-only
+Set this option to prevent V4L applications from choosing
+YUV palettes. Try this option if you get low frame rates.
 .TP
 .BI "\-v, \-\-verbose" \ level
 Set the amount of debugging messages. A level of 0 means no output at
